@@ -1,3 +1,9 @@
+2001-01-24  Robin * Slomkowski  <rslomkow@eazel.com>
+
+	* nautilus.spec.in: nautilus-suggested now requires
+	mozill-psm and mozilla-mail, updated version
+	required for serveral packages.
+
 2001-01-24  Ramiro Estrugo  <ramiro@eazel.com>
 
 	* data/static_bookmarks.xml:
